--- a/simias/src/server/Simias.Server/Report.resx
+++ b/simias/src/server/Simias.Server/Report.resx
@@ -39,8 +39,8 @@
 	<resheader name="Writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="REPORT">
-		<value>Report</value>
+	<data name="REPORTS">
+		<value>Reports</value>
 	</data>
 	<data name="REPORT_TIME">
 		<value>Report Time</value>
