Finished reporting implementation.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6460 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/Report.resx
+++ b/simias/src/server/Simias.Server/Report.resx
@@ -102,4 +102,7 @@
 	<data name="ORPHANED_OWNER">
 		<value>Orphaned Owner</value>
 	</data>
+	<data name="LAST_SYNC_TIME">
+		<value>Last Sync Time</value>
+	</data>
 </root>
