Fixed some minor number formatting problems and set limits for quota, file size, and interval.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6463 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -229,13 +229,13 @@
 		<value>The iFolder does not exist.</value>
 	</data>
 	<data name="ERRORINVALIDFILESIZE">
-		<value>An invalid file size limit value was specified.</value>
+		<value>An invalid file size limit value was specified. Value must be between 1 and 2e+063 - 1.</value>
 	</data>
 	<data name="ERRORINVALIDQUOTA">
-		<value>An invalid disk space quota value was specified.</value>
+		<value>An invalid disk space quota value was specified. Value must be between 1 and 2e+063 - 1.</value>
 	</data>
 	<data name="ERRORINVALIDSYNCINTERVAL">
-		<value>An invalid synchronization interval was specified.</value>
+		<value>An invalid synchronization interval was specified. Value must be between 1 and 2e+031 - 1.</value>
 	</data>
 	<data name="ERRORLOCKEXCEPTION">
 		<value>The operation was cancelled because the iFolder has been locked/disabled by the administrator.</value>
