https://bugzilla.novell.com/show_bug.cgi?id=171869
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6501 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -546,4 +546,7 @@
     <data name="FILES.REMOVE">
         <value>remove</value>
     </data>
+    <data name="MINIMUMBROWSER">
+        <value>You are currently running an unsupported browser. You can continue, but it is recommended that you use one of the following browsers: Firefox&amp;nbsp;1.5+, IE&amp;nbsp;6.0+, or Safari&amp;nbsp;2.0.3+</value>
+    </data>
 </root>
