WebAccess redirect for multiserver env; loadbalance user provisioner enabled; WebAdmin homeserver column; Display all servers (Servers Page in WebAdmin)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6610 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,9 @@
-/* DomainService.asmx.cs -> creates the unmanaged files with an indirection
+2006-11-20  Johnny Jacob  <jjohnny@novell.com>
 
-/* IdentitySyncService.cs -> Change to enable webaccess to login slaves
+	* HostProvider.cs : Enable loadbalance user provisioner.
+
+2006-11-19  Balakrishnan KalIdas  <BKalidas@novell.com>
+	
+        * DomainService.asmx.cs : creates the unmanaged files with an indirection
+
+	* IdentitySyncService.cs : Change to enable webaccess to login slaves
