--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-27  Sushma Rai  <rsushma@novell.com>
+
+	* class SimiasServerSetup: Fixed a typo in apache configuration option
+	string.
+
 2006-11-24  Sushma Rai  <rsushma@novell.com>
 
 	* class SimiasServerSetup: Changed the default config path commandline 
