--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-29  B S Srinidhi  <srinidhi@novell.com>
+
+	* Makefile.am: Fixed file names in EXTRA_DIST variable.
+
 2006-11-27  Sushma Rai  <rsushma@novell.com>
 
 	* class SimiasServerSetup: Fixed a typo in apache configuration option
