--- a/simias/src/ChangeLog
+++ b/simias/src/ChangeLog
@@ -2,3 +2,11 @@
 
 	* Makefile.am: Fixed correct folder selections while building the
 	client and server package.
+
+2006-11-30  Ramesh Sunder  <sramesh@novell.com>
+
+	* SecurityState.cs : Added a new file for providing Security Policy in Policy sub-directory
+
+	* SharedCollection.cs: Modified constructors to add security status . (In Simias.Web sub-directory)
+
+	
