--- a/simias/ChangeLog
+++ b/simias/ChangeLog
@@ -1,2 +1,4 @@
-See http://www.ifolder.com/ for more information on the iFolder open source project.
+2006-12-5  Johnny Jacob <jjohnny@novell.com> 
+	
+	* configure.in : inserted a missing '/' for mappingpath.
 
