Fix for Reports TS and Reports in webadmin . See Changelog files for more information.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6629 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -514,7 +514,10 @@
 		<value>Username:</value>
 	</data>
 	<data name="LOGLEVELTAG">
-		<value>Log Level:</value>
+		<value>Log Level</value>
+	</data>
+	<data name="LOGTAG">
+		<value>Log</value>
 	</data>
 	<data name="LOGOUT">
 		<value>Log Out</value>
