--- a/simias/src/admin/ChangeLog
+++ b/simias/src/admin/ChangeLog
@@ -1,3 +1,16 @@
+2006-12-8  Johnny Jacob  <jjohnny@novell.com
+
+	* ServerDetails.aspx.cs (GetLogList): Removed adminlogfile and
+	webaccess log file references
+	(GetReportList) : Removed hard coded logfile names. Query the
+	server for report files.
+	( GetServerDetails) : remoteweb object to get the details of
+	remoteserver. Hide unimplemented stats widgets
+	(ViewReportFile) : Redirect the response to the remote server
+	(ViewLogFile) : Redirect the response to the remote server for log
+	files.
+	
+	
 2006-11-20  Johnny Jacob  <jjohnny@novell.com>
 
 	* Users.aspx.cs : Added new data column for HomeServer.
