[08Dec2006] Multi-volume support - created interfaces and enabled webaccess
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6630 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/CollectionStore/ChangeLog
+++ b/simias/src/core/CollectionStore/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-08 Kalidas Balakrishnan <bkalidas@novell.com>
+
+*Store.cs: more implementation for the Unmanaged path
+*Collection.cs: more interface implementation for Unmanaged Path for future expansion
+
 /* Store.cs -> Now includes the indirection for Unmanaged files
 
 2006-11-30	Ramesh Sunder <sramesh@novell.com>
