--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,5 @@
+2006-12-11 Kalidas Balakrishnan <bkalidas@novell.com>
+	*DomainService.asmx.cs:(CreateMaster) Unmanaged path incorrect protection level fix
 2006-12-08 Kalidas Balakrishnan <bkalidas@novell.com>
 	*DomainService.asmx.cs:(CreateMaster)updated the way indirections are handled based on new interface
 
