--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-11  Johnny Jacob  <jjohnny@novell.com>
+
+	* setup/SimiasServerSetup.cs : set 'usingLDAP' varible based on
+	option input. Fixes a break for interative mode.
+	
 2006-12-8  Johnny Jacob  <jjohnny@novell.com>
 
 	* Simias.Server/Domain.cs : create the reportcollection on both
