--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,14 +1,23 @@
+2006-12-15  Johnny Jacob  <jjohnny@novell.com>
+
+	* IdentitySyncManager.asmx.cs : MonthsOfYear. Added missing May.
+	
 2006-12-11 Kalidas Balakrishnan <bkalidas@novell.com>
-	*DomainService.asmx.cs:(CreateMaster) Unmanaged path incorrect protection level fix
+	
+	*DomainService.asmx.cs:(CreateMaster) Unmanaged path incorrect
+	protection level fix
+	
 2006-12-08 Kalidas Balakrishnan <bkalidas@novell.com>
-	*DomainService.asmx.cs:(CreateMaster)updated the way indirections are handled based on new interface
+	
+	*DomainService.asmx.cs:(CreateMaster)updated the way indirections
+	are handled based on new interface
 
 2006-11-20  Johnny Jacob  <jjohnny@novell.com>
 
 	* HostProvider.cs : Enable loadbalance user provisioner.
 
 2006-11-19  Balakrishnan KalIdas  <BKalidas@novell.com>
-	
+
         * DomainService.asmx.cs : creates the unmanaged files with an indirection
 
 	* IdentitySyncService.cs : Change to enable webaccess to login slaves
