--- a/simias/src/webservices/ChangeLog
+++ b/simias/src/webservices/ChangeLog
@@ -1,4 +1,8 @@
-2006-12-8  Johnny Jacob  <jjohnny@novell.com?
+2006-12-15  Johnny Jacob  <jjohnny@novell.com>	
+
+	* LastSyncInfo.cs : MonthsOfYear. Added missing 'May'
+	
+2006-12-8  Johnny Jacob  <jjohnny@novell.com>
 
 	* iFolderAdmin.asmx.cs (GetReports) : Web method Added.
 	* iFolderCommonLocal.cs (GetReports) : Virtual Function added.
