Simias.conf : Corrected DataDir Env Variable.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6635 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-12  Johnny Jacob  <jjohnny@novell.com>
+
+	*setup/SimiasServerSetup.cs : s/SimiasDataPath/SimiasDataDir .
+	
 2006-12-11  Johnny Jacob  <jjohnny@novell.com>
 
 	* setup/SimiasServerSetup.cs : set 'usingLDAP' varible based on
