* Fixed the issue of webbindir path not getting correctly set in the   simias-server script
* Included xsp in BuildRequires and Requires tags.



git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6638 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/package/ChangeLog
+++ b/simias/package/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-19  B S Srinidhi  <srinidhi@novell.com>
+
+	* linux/simias.spec.autobuild: Added xsp into BuildRequires as well
+	as "# neededforbuild" tags. Fixed the typo in naming the xsp package
+	in Requires tag.
+
 2006-12-18  B S Srinidhi  <srinidhi@novell.com>
 
 	* linux/simias.spec.autobuild: Updated the %files section to reflect
