ChangeLogs for the commits 6636 and 6637(Changes to web access and web services code to enable encryption feature through web-access)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6639 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/CollectionStore/ChangeLog
+++ b/simias/src/core/CollectionStore/ChangeLog
@@ -9,4 +9,5 @@
 
 	* Collection.cs: Modified constructors to support encryption. Added Property for security status
 
+	* Collection.cs : Added Property to retrieve and set the encryption algorithm
 
