Improved GetHomeServerForUser : Talk to master only if the user is not provisioned.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6642 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/ChangeLog
+++ b/simias/src/webservices/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-22  Johnny Jacob  <jjohnny@novell.com>
+
+	* iFolderServer.cs (GetHomeServerForUser) : Talk to Master only if
+	the user doesnt have a HomeServer.
+	
 2006-12-18  Arul Selvan  <rarul@novell.com>
 
 	* iFolderWebLocal.asmx.cx: Added a web method for setting actual file length 
