--- a/simias/src/core/Simias.Web/Changelog
+++ b/simias/src/core/Simias.Web/Changelog
@@ -1,3 +1,8 @@
+2006-12-22 Kalidas Balakrishnan <bkalidas@novell.com>
+	*SharedCollection.cs:(CreateSharedCollection) updated the way Unmanaged path is handled, made is dynamic and removed assumptions of the path, 
+	fixes the previous fix that was broken due to encryption changes
+
+
 2006-12-08 Kalidas Balakrishnan <bkalidas@novell.com>
 
 	*SharedCollection.cs:(CreateSharedCollection) updated the way Unmanaged path is handled, made is dynamic and removed assumptions of the path
