--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,10 @@
+2007-1-4  Johnny Jacob  <jjohnny@novell.com>
+
+	* DiscoveryWS : Initial Commit for Discovery WebService from
+	discovery branch.
+	* Makefile.am : Include DiscoveryWS.
+	* Simias.Server/Catalog.cs : Add extra properties to CatalogEntry.
+	
 2006-12-12  Johnny Jacob  <jjohnny@novell.com>
 
 	*setup/SimiasServerSetup.cs : s/SimiasDataPath/SimiasDataDir .
