--- a/simias/ChangeLog
+++ b/simias/ChangeLog
@@ -1,3 +1,7 @@
+2007-1-11  Johnny Jacob  <jjohnny@novell.com>
+
+	* configure.in : inserted a missing '/' for mappingpath for linux.
+	
 2007-1-4  Johnny Jacob <jjohnny@novell.com> 	
 
 	* configure.in : Added DiscoveryWS/Makefile and DiscoveryWS/Assemblyinfo.cs
