Added debug code to print parsed env variables.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6652 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,9 @@
+2007-Jan-12  Johnny Jacob  <jjohnny@novell.com>
+	
+	* Options.cs : Added Debug code to print Env Variables parsed.
+	* SimiasServerSetup : s/ldap-Server/ldap-server (rev 6650) and
+	s/defaultConfigPath/default-config-path (rev 6651).
+
 2007-Jan-10 Kalidas Balakrishnan <bkalidas@novell.com>
 
 SimiasServerSetup.cs - enabled apache permissions for all directories in the store. Added the store path in the config file for iFolder TSA to get the store
