Added Web Access and Web Admin install scripts and modules for YaST and interactive install
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6653 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,10 @@
+2007-Jan-12 Kalidas Balakrishnan <bkaldias@novell.com>
+        * SimiasServerSetup.cs - moved the permission setting after setting up the log directories
+        * Makefile.am - updated the makefile to build Web Access and Web Admin setup utilities
+        * iFolderWedSetup.cs - Added this file for Web Access setup
+        * iFolderAdminSetup.cs - Added this file for Web Admin setup
+        Added ifolder-web-setup.in and ifolder-admin-setup.in scripts
+
 2007-Jan-12  Johnny Jacob  <jjohnny@novell.com>
 	
 	* Options.cs : Added Debug code to print Env Variables parsed.
