Multiserver'd Webaccess. Initial commit
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6654 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/ChangeLog
+++ b/simias/src/webaccess/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-12  Johnny Jacob  <jjohnny@novell.com>
+
+	* Browse.aspx.cs : Resolve the location of remote iFolder.
+	* Download.ashx.cs : Resolve the location of remote iFolder.
+	
 2006-12-18  Arul Selvan	 <rarul@novell.com>
 
 	* iFolderNew.aspx : Added fields for supporting encryption and ssl features
