--- a/simias/src/core/CollectionStore/ChangeLog
+++ b/simias/src/core/CollectionStore/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-17  Johnny Jacob  <jjohnny@novell.com>
+
+	* PropertyList.cs (StripLocalProperties) : Select single node and
+	delete them.
+	
 2006-12-08 Kalidas Balakrishnan <bkalidas@novell.com>
 
 *Store.cs: more implementation for the Unmanaged path
