Updated the buffer size for larger file upload time-out. Updated setup for iFolder TSA to work.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6669 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,5 @@
+2007-Jan-22 Kalidas Balakrishnan <bkalidas@novell.com>
+	*SimiasServerSetup.cs - updated for ifolder-tsa to work
 2007-Jan-12 Kalidas Balakrishnan <bkaldias@novell.com>
         * SimiasServerSetup.cs - moved the permission setting after setting up the log directories
         * Makefile.am - updated the makefile to build Web Access and Web Admin setup utilities
