--- a/simias/src/webservices/ChangeLog
+++ b/simias/src/webservices/ChangeLog
@@ -1,3 +1,6 @@
+2007-01-22 Kalidas Balakrishnan <bkalidas@novell.com>
+	*Download.ashx.cs :Updated the buffer size
+
 2007-01-12  Johnny Jacob  <jjohnny@novell.com>
 
 	* iFolderCommonLocal.cs (GetiFolderLocation) : Added. Get the
