Changed default Private/Public Example port to 80.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6672 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/ChangeLog
+++ b/simias/src/server/ChangeLog
@@ -1,3 +1,8 @@
+25-01-2007  Johnny Jacob  <jjohnny@novell.com>
+
+	* SimiasServerSetup.cs : Changed default port example for
+	Private/Public URL to 80.
+	
 2007-1-4  Johnny Jacob  <jjohnny@novell.com>
 
 	* DiscoveryWS : Initial Commit for Discovery WebService from
