Add servername to report collection name.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6673 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-23  Johnny Jacob  <jjohnny@novell.com>
+
+	* Report.cs : Create the report collection with the server
+	name. Fixes #233087.
+	
 2006-12-15  Johnny Jacob  <jjohnny@novell.com>
 
 	* IdentitySyncManager.asmx.cs : MonthsOfYear. Added missing May.
