--- a/simias/src/core/CollectionStore/ChangeLog
+++ b/simias/src/core/CollectionStore/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-28  Johnny Jacob  <jjohnny@novell.com>
+
+	* Store.cs (GetStore) : Read and store the Recovery Agent
+	certificates.
+	
 2007-01-17  Johnny Jacob  <jjohnny@novell.com>
 
 	* PropertyList.cs (StripLocalProperties) : Select single node and
