--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -111,6 +111,9 @@
     <data name="SPANISH">
         <value>Spanish</value>
     </data>
+    <data name="SELECTRECOVERYAGENT">
+        <value>Select the Passphrase Recovery Agent :</value>
+    </data>
     <data name="FRENCH">
         <value>French</value>
     </data>
@@ -162,6 +165,15 @@
     <data name="CREATE">
         <value>Create</value>
     </data>
+    <data name="ENTERPASSPHRASE">
+        <value>Enter the Passphrase  :   </value>
+    </data>
+    <data name="Passphrasesdonotmatch">
+        <value>Passphrases do not match.</value>
+    </data>
+    <data name="Wrongpassphrase">
+        <value>Wrong Passphrase !!!</value>
+    </data>
     <data name="ENTRY.FOLDERNAME">
         <value>Folder Name:</value>
     </data>
@@ -198,6 +210,12 @@
     <data name="MESSAGE.WARNING">
         <value>Warning:</value>
     </data>
+    <data name="Pleasereenterpassphrase">
+        <value>Re-enter the Passphrase :</value>
+    </data>
+    <data name="NoRAavailable">
+        <value>Currently no Recovery-Agent stored !!! Please select sharable mode.</value>
+    </data>
     <data name="ENTRY.EMPTYFILE">
         <value>A zero byte file was uploaded.</value>
     </data>
@@ -225,6 +243,9 @@
     <data name="IFOLDER.NONAME">
         <value>An iFolder name is required.</value>
     </data>
+    <data name="IFOLDER.NOPASSPHRASE">
+        <value> Passphrase must be entered for encryption</value>
+    </data>
     <data name="RIGHTS">
         <value>Access</value>
     </data>
@@ -245,6 +266,15 @@
     </data>
     <data name="LOGIN.SECUREFAILED">
         <value>Unable to communicate with the iFolder server securely.</value>
+    </data>
+    <data name="Encrypttheifolder">
+        <value>Encryption Enabled</value>
+    </data>
+    <data name="EncryptionCondition">
+        <value>Encrypted iFolder cannot be shared</value>
+    </data>
+    <data name="ShareCondition">
+        <value>Sharable iFolder cannot be encrypted</value>
     </data>
     <data name="ENTRY.LOCKEXCEPTION">
         <value>The operation was cancelled because the iFolder has been locked/disabled by the administrator.</value>
@@ -292,7 +322,7 @@
         <value>Details</value>
     </data>
     <data name="SHARE">
-        <value>Share</value>
+        <value>Sharable</value>
     </data>
     <data name="INFO">
         <value>Info</value>
