String value changed back to sharable and policies enabled for encryption/sharable
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6695 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -322,6 +322,9 @@
         <value>Details</value>
     </data>
     <data name="SHARE">
+        <value>Share</value>
+    </data>
+    <data name="SHARABLE">
         <value>Sharable</value>
     </data>
     <data name="INFO">
