List all the users in webaccess. Fixes #235073
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6703 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/ChangeLog
+++ b/simias/src/webaccess/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-09  Johnny Jacob  <jjohnny@novell.com>
+
+	* Share.aspx.cs : Add UserName to the searchbar. Fixes #235073.
+	
 2007-01-22 Kalidas Balakrishnan <bkalidas@novell.com>
 	*Download.ashx.cs : Updated the buffer size
 
