Don't Prompt for LDAP details if it is a slave. Fixes #236245
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6704 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,8 @@
+2007-02-09  Johnny Jacob  <jjohnny@novell.com>
+
+	* setup/SimiasServerSetup.cs : Don't Prompt for LDAP details if it is a
+	slave. Use configuration from master. Fixes #236245.
+	
 2007-Jan-22 Kalidas Balakrishnan <bkalidas@novell.com>
 	*SimiasServerSetup.cs - updated for ifolder-tsa to work
 2007-Jan-12 Kalidas Balakrishnan <bkaldias@novell.com>
