Certificate display page added for web-acces Encryption
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6711 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -249,6 +249,12 @@
     <data name="RIGHTS">
         <value>Access</value>
     </data>
+    <data name="ACCEPT">
+        <value>Accept</value>
+    </data>
+    <data name="DENY">
+        <value>Back</value>
+    </data>
     <data name="RIGHTS.ADMIN">
         <value>Full Control</value>
     </data>
