Create/Upload/Download ifolders/files implemented with encryption for web-access
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6727 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -172,7 +172,7 @@
         <value>Passphrases do not match.</value>
     </data>
     <data name="Wrongpassphrase">
-        <value>Wrong Passphrase !!!</value>
+        <value>Invalid Passphrase </value>
     </data>
     <data name="ENTRY.FOLDERNAME">
         <value>Folder Name:</value>
