Prompt for Apache User/Group. In Slave use sysadmin for talking to LDAP server.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6750 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,8 @@
+2007-03-03  Johnny Jacob  <jjohnny@novell.com>
+
+	* SimiasServerSetup.cs : Prompt for Apache User/Group if n/a. Use
+	avail LDAP credentials in Slave.
+	
 2007-02-09  Johnny Jacob  <jjohnny@novell.com>
 
 	* setup/SimiasServerSetup.cs : Don't Prompt for LDAP details if it is a
