--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -174,6 +174,9 @@
     <data name="PASSPHRASE_INCORRECT">
         <value>Invalid Passphrase </value>
     </data>
+    <data name="CONFIG_RECOVERY_AGENT">
+        <value>Configure the Recovery Agent for Encryption </value>
+    </data>
     <data name="ENTRY.FOLDERNAME">
         <value>Folder Name:</value>
     </data>
