fix so that weak passphrase is not stored into the current session variable if any exception is thrown about weak passphrase
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6771 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -213,6 +213,9 @@
     <data name="MESSAGE.WARNING">
         <value>Warning:</value>
     </data>
+    <data name="ENTERPASSPHRASE">
+        <value>Enter Passphrase :</value>
+    </data>
     <data name="REENTER_PASSPHRASE">
         <value>Re-enter the Passphrase :</value>
     </data>
