--- a/simias/src/admin/ChangeLog
+++ b/simias/src/admin/ChangeLog
@@ -1,15 +1,8 @@
-2006-11-17 Johnny Jacob <jjohnny@novell.com>
-	
-	* iFolderAdmin.resx : Added data for IDENTITYSYNCTAG and IFOLDER
-	
-	* SystemInfo.aspx : Added IDSyncInterval,IDSyncMinutesTag,
-	SyncNowButton widgets
-	
-	* SystemInfo.aspx.cs : (ShowIdentitySync) : Added. Decides whether
-	to show/hide ID Sync UI.
-	(OnSyncNowButton_Click) : Added. Initiate the ID Sync immediately
-	when 'Sync Now' clicked.
-	(OnSaveButton_Click) : Validate SyncInterval and set it.
+2007-03-07  B S Srinidhi  <srinidhi@novell.com>
+
+	* Makefile.am : Copy the SimiasLib.dll instead of symlinking it -
+	creates problems when building the RPM.
+
 2006-12-8  Johnny Jacob  <jjohnny@novell.com
 
 	* ServerDetails.aspx.cs (GetLogList): Removed adminlogfile and
@@ -22,7 +15,19 @@
 	(ViewLogFile) : Redirect the response to the remote server for log
 	files.
 	
+2006-11-17 Johnny Jacob <jjohnny@novell.com>
 	
+	* iFolderAdmin.resx : Added data for IDENTITYSYNCTAG and IFOLDER
+	
+	* SystemInfo.aspx : Added IDSyncInterval,IDSyncMinutesTag,
+	SyncNowButton widgets
+	
+	* SystemInfo.aspx.cs : (ShowIdentitySync) : Added. Decides whether
+	to show/hide ID Sync UI.
+	(OnSyncNowButton_Click) : Added. Initiate the ID Sync immediately
+	when 'Sync Now' clicked.
+	(OnSaveButton_Click) : Validate SyncInterval and set it.
+
 2006-11-20  Johnny Jacob  <jjohnny@novell.com>
 
 	* Users.aspx.cs : Added new data column for HomeServer.
