--- a/simias/package/ChangeLog
+++ b/simias/package/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-16  B S Srinidhi  <srinidhi@novell.com>
+
+	* linux/ifolder3-server.spec.autobuild : Updated some of the post
+	(un)install section commands and a few other changes
+
 2006-12-19  B S Srinidhi  <srinidhi@novell.com>
 
 	* linux/simias.spec.autobuild: Added xsp into BuildRequires as well
