Updated BuildRequires tag in the spec file
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6779 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/package/ChangeLog
+++ b/simias/package/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-16  B S Srinidhi  <srinidhi@novell.com>
 
+	* linux/simias.spec.autobuild : Updated BuildRequires and other
+	small changes
+
+2007-03-16  B S Srinidhi  <srinidhi@novell.com>
+
 	* linux/ifolder3-server.spec.autobuild : Updated some of the post
 	(un)install section commands and a few other changes
 
