--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-16  Johnny Jacob  <jjohnny@novell.com>
+
+	* catalog.cs (ProcessEvents) : Wait till catalog collection is
+	available. Fixes #243524.
+	
 2007-01-23  Johnny Jacob  <jjohnny@novell.com>
 
 	* Report.cs : Create the report collection with the server
