Pickup Log files from datadir/log and not from default location
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6792 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-03  Johnny Jacob  <jjohnny@novell.com>
+
+	* ReportLogHandler.ashx.cs : Read logfile from datadir and not
+	from the default one. Fixes 252283.
+	
 2007-03-16  Johnny Jacob  <jjohnny@novell.com>
 
 	* catalog.cs (ProcessEvents) : Wait till catalog collection is
