css/Users.css : Allow the table to consume 100% of available space
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6796 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/ChangeLog
+++ b/simias/src/admin/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-07  B S Srinidhi <srinidhi.bs@gmail.com>
+
+	* css/Users.css : Allow the table to consume 100% of available space
+
 2007-03-07  B S Srinidhi  <srinidhi@novell.com>
 
 	* Makefile.am : Copy the SimiasLib.dll instead of symlinking it -
