Included update-alternatives in BuildRequires.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6800 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/package/ChangeLog
+++ b/simias/package/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-11  B S Srinidhi  <srinidhi@novell.com>
+
+	* linux/ifolder3-server.spec.autobuild : Included update-alternatives
+	in BuildRequires.
+
 2007-03-16  B S Srinidhi  <srinidhi@novell.com>
 
 	* linux/simias.spec.autobuild : Updated BuildRequires and other
