--- a/simias/ChangeLog
+++ b/simias/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-17  B S Srinidhi  <srinidhi@novell.com>
+
+	* configure.in : avoid expansion and hardcoding of $HOME when
+	substituting simiaslogdir. Also fix the path for Windows XP & Vista.
+
 2007-1-11  Johnny Jacob  <jjohnny@novell.com>
 
 	* configure.in : inserted a missing '/' for mappingpath for linux.
