Check for invalid characters in server name.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6803 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Changelog
+++ b/simias/src/server/setup/Changelog
@@ -1,3 +1,8 @@
+2007-04-17  Johnny Jacob  <jjohnny@novell.com>
+
+	* SimiasServerSetup.cs : Check for Invalid Chars in server name and
+          reprompt. In non-interactive throw exception.
+
 2007-03-05  B S Srinidhi  <srinidhi@novell.com>
 
 	* Makefile.am: Remove generated scripts (patch by Jan-Simon Möller).
