--- a/simias/src/webaccess/ChangeLog
+++ b/simias/src/webaccess/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-03  B S Srinidhi  <srinidhi@novell.com>
+
+	* iFolderWeb.*.resx : Updated string translations
+
 2007-03-07  B S Srinidhi  <srinidhi@novell.com>
 
 	* Makefile.am : Copy the SimiasLib.dll instead of symlinking it -
