--- a/simias/src/webservices/ChangeLog
+++ b/simias/src/webservices/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-03  B S Srinidhi  <srinidhi@novell.com>
+
+	* iFolderAdmin.*.resx : Updated string translations
+
 2007-01-22 Kalidas Balakrishnan <bkalidas@novell.com>
 	*Download.ashx.cs :Updated the buffer size
 
