Don't as for credentials for downloading logs/reports. Fixes 252282.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6827 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/ChangeLog
+++ b/simias/src/admin/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-07  Johnny Jacob  <jjohnny@novell.com>
+	
+	* ServerDetails.aspx.cs : Dont prompt for credentials while
+	downloading logs/reports. Fixes #252282.
+	
 2007-04-26  Johnny Jacob  <jjohnny@novell.com>
 	
 	* iFolderDetailsPage.aspx.cs : Resolve the location of iFolder
