Remove the size column. For #235384.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6845 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/ChangeLog
+++ b/simias/src/admin/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-07  Johnny Jacob  <jjohnny@novell.com>
 	
+	* UserDetails.aspx.cs : Removing 'Size' column.
+	
+2007-05-07  Johnny Jacob  <jjohnny@novell.com>
+	
 	* ServerDetails.aspx.cs : Dont prompt for credentials while
 	downloading logs/reports. Fixes #252282.
 	
