--- a/simias/ChangeLog
+++ b/simias/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-17  Johnny Jacob  <jjohnny@novell.com>	
+
+	* configure.in : check for host_cpu for 32/64 bit arch
+	
 2007-04-17  B S Srinidhi  <srinidhi@novell.com>
 
 	* configure.in : avoid expansion and hardcoding of $HOME when
