Fixes 273372. Save description during ifolder creation.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6851 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/ChangeLog
+++ b/simias/src/webservices/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-18  Johnny Jacob  <jjohnny@novell.com>
+
+	* iFolder.cs (CreateiFolder) : Include description while creating
+	ifolder. Fixes #273372.
+	
 2007-05-03  B S Srinidhi  <srinidhi@novell.com>
 
 	* iFolderAdmin.*.resx : Updated string translations
