Listen for member node changes and update catalog accordingly. Fixes #273662.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6855 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/ChangeLog
+++ b/simias/src/server/Simias.Server/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-18  Johnny Jacob  <jjohnny@novell.com>
+
+	* Catalog.cs : Detect and update catalog when owner of a
+	collection is changed. Fixes #273662, #268251.
+	
 2007-04-03  Johnny Jacob  <jjohnny@novell.com>
 
 	* ReportLogHandler.ashx.cs : Read logfile from datadir and not
