Orphaned iFolder utility added for web-admin to handle orphaned iFolders against bug id 284175
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6871 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -69,6 +69,9 @@
 	<data name="ADMINLOGFILE">
 		<value>Web Administrator</value>
 	</data>
+	<data name="ADOPT">
+		<value>Adopt</value>
+	</data>
 	<data name="ALL">
 		<value>All</value>
 	</data>
@@ -602,6 +605,12 @@
 	</data>
 	<data name="OFF">
 		<value>Off</value>
+	</data>
+	<data name="ORPHANED">
+		<value>Orphan</value>
+	</data>
+	<data name="ORPHANTAG">
+		<value>Orphan :</value>
 	</data>
 	<data name="OK">
 		<value>OK</value>
